# How-to-structure-rust-project

./: README.md
lib-project-structure/: Cargo.toml  README.md
lib-project-structure/src/: lib.rs
lib-project-structure/src/fizzbuzz/: fizzbuzzer.rs
main-project-structure/: Cargo.toml
main-project-structure/src/: main.rs
main-project-structure/src/fizzbuzz/: fizzbuzzer.rs  mod.rs
multiple-file/: Cargo.toml
multiple-file/src/: fizzbuzz.rs  main.rs  math.rs
single-file/: Cargo.toml
single-file/src/: main.rs
workspace-project-structure/: Cargo.toml  README.md
workspace-project-structure/fizzbuzz/: Cargo.toml
workspace-project-structure/fizzbuzz/src/fizzbuzzer/: mod.rs
workspace-project-structure/fizzbuzz/src/fizzbuzzer/buzzer/: mod.rs
