[package]
name = "workspace-project-structure"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "math",
    "fizzbuzz",
]

[dependencies]
math = { path = "./math"}
fizzbuzz = { path = "./fizzbuzz"}
rand = "0.8.5"
